# shakar

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  LICENSE  Makefile  README.md  grammar.ebnf  grammar.lark  grammar_lalr.lark  mypy.ini  pyproject.toml  requirements.txt  sanity_check_basic.py  shakar_parse_auto.py
docs/: ast_reference.md  implicit_binders_guide.md  shakar-anchor-conformance.md  shakar-design-notes.md  shakar-design-notes.md.old  tetris.sk
highlight/: Makefile
lark.old/: README.md  parse_auto.py
lsp/: Makefile
nvim-plugin/: README.md
rt/: README.md  grammar.lark  selector_eval.py  shakar_eval.py  shakar_lower.py  shakar_parse_auto.py  shakar_run.py  shakar_runtime.py  shakar_stdlib.py  shakar_tree.py  shakar_utils.py
tests/: conftest.py  test_assign_expr.py  test_assign_pun.py  test_ast.py  test_call_blocks.py  test_collections.py  test_concurrency.py  test_contracts.py  test_control_flow.py  test_decorators.py  test_error_context_stage3.py  test_error_handling.py  test_eval_objects.py  test_expr_continuation.py  test_fan.py  test_frame_api_stage2.py  test_functions.py  test_generators.py  test_imports.py  test_lexer.py  test_loops.py  test_match.py  test_numbers.py  test_once.py  test_operators.py  test_parser_grammar.py  test_parser_invariants.py  test_parser_keywords.py  test_repl_highlight.py  test_runner.py  test_scoping.py  test_selector_compact.py  test_strings.py  test_write_targets.py
tree-sitter-shakar/: .gitattributes  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  setup.py  (+2 more)
(+107 files in other folders)
