[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shakar-ref"
version = "0.1.0"
description = "Shakar reference implementation - parser and runtime"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
shakar = "shakar_ref.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
